--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Nav bar
 			 </div>
 			 <div>
 			 	<a href="linkedin" style="margin-right: -0px"><img src="C:\Users\Anshul Nagar\Desktop\link.png" height="50px"; width="50px";></a>
-			 <a href="linkedin">	<img src="C:\Users\Anshul Nagar\Desktop\cop.jpg" height="50px"; width="50px";></a>
+			 <a href="linkedin">	<img src="cop.jpg" height="50px"; width="50px";></a>
 			 </div>
 
 
