--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Nav bar
 			 <a href="feedback.html" class="fe">	Contact us</a>
 			</header>
 			<div id="name" >
-				<img src="C:\Users\Anshul Nagar\Desktop\thought 5.jpg" align="right"style="height: 500;width: 600;">
+				<img src="thought 5.jpg" align="right"style="height: 500;width: 600;">
 			<h1 id="font"> I'am Ishu <br>
 				Singhal
 			</h1>
@@ -72,26 +72,30 @@ Nav bar
 			<p style=""><b>There are serval platform in which i'm available<br>
 			 like facebok,linkedin,freelance<br></b></p>
 			 <div id="phone no">
-			 <img src="C:\Users\Anshul Nagar\Desktop\ph.png" height="20px"; width="20px"; align="left";>
+			 <img src="ph.png" height="20px"; width="20px"; align="left";>
 			<p align="left"> +91 8124786439</p>
 			 </div>
 			 <div id="location">
 			 	
 			 	<p align="right"> Sikandara ,Agra 
 			 	&nbsp 282007</p>
-			 	<img src="C:\Users\Anshul Nagar\Desktop\lo.png";  height="30px"; width="30px"; style="margin-left: 900px; margin-top: -40px" >
+			 	<img src="lo.png";  height="30px"; width="30px"; style="margin-left: 900px; margin-top: -40px" >
 			 </div>
 			 <div id="email">
 			 	<img src="ema.png" align="left" ;height="30px"; width="30px";>
 			 	<p align="left">ishusinghal5567@gmail.com</p>
 			 </div>
 			 <div>
-			 	<a href="linkedin" style="margin-right: -0px"><img src="C:\Users\Anshul Nagar\Desktop\link.png" height="50px"; width="50px";></a>
+			 	<a href="linkedin" style="margin-right: -0px"><img src="link.png" height="50px"; width="50px";></a>
 			 <a href="linkedin">	<img src="cop.jpg" height="50px"; width="50px";></a>
 			 </div>
 
 
 			<content>© 1996,copyright this website
 			          <br>please feedback us</content>
-
+			</footer>
+			</div>
+	
 </body>
+</html>
+
