--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ Nav bar
 			<h1 id="font"> I'am Ishu <br>
 				Singhal
 			</h1>
-			<button style="margin-left: 250px; height: 30px;width: 80px; border-style:none;"> about us</button>
+			<button style="margin-left: 250px; height: 30px;width: 80px; border-style:none;">
+				about us</button>
 			</div>
 			<div id="footer">
 			<footer>
@@ -76,10 +77,9 @@ Nav bar
 			<p align="left"> +91 8124786439</p>
 			 </div>
 			 <div id="location">
-			 	
 			 	<p align="right"> Sikandara ,Agra 
 			 	&nbsp 282007</p>
-			 	<img src="lo.png";  height="30px"; width="30px"; style="margin-left: 900px; margin-top: -40px" >
+			 	<img src="lo.png"  height="30px"; width="30px"; style="margin-left: 900px; margin-top: -40px" >
 			 </div>
 			 <div id="email">
 			 	<img src="ema.png" align="left" ;height="30px"; width="30px";>
@@ -87,7 +87,7 @@ Nav bar
 			 </div>
 			 <div>
 			 	<a href="linkedin" style="margin-right: -0px"><img src="link.png" height="50px"; width="50px";></a>
-			 <a href="linkedin">	<img src="cop.jpg" height="50px"; width="50px";></a>
+			 <a href="linkedin">	<img src="cop.jpg" height="30px"; width="30px";></a>
 			 </div>
 
 
